--- a/apps/web/src/app/page.module.css
+++ b/apps/web/src/app/page.module.css
@@ -7,12 +7,12 @@
   --button-secondary-hover: #f2f2f2;
 
   display: grid;
-  grid-template-rows: 20px 1fr 20px;
+  grid-template-rows: auto 1fr auto;
   align-items: center;
   justify-items: center;
   min-height: 100svh;
-  padding: 80px;
-  gap: 64px;
+  padding: 20px;
+  gap: 32px;
   font-synthesis: none;
 }
 
@@ -148,7 +148,7 @@ button.secondary {
 
 @media (max-width: 600px) {
   .page {
-    padding: 32px;
+    padding: 16px;
     padding-bottom: 80px;
   }
 
@@ -164,10 +164,11 @@ button.secondary {
     flex-direction: column;
   }
 
-  .ctas a {
+  .ctas a,
+  button {
+    width: 100%;
     font-size: 14px;
-    height: 40px;
-    padding: 0 16px;
+    padding: 10px;
   }
 
   a.secondary {
